# Orion-Trading-Environment

./: Dockerfile  README.md  grader.py  inference.py  leaderboard.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: base_agent.py  learning_agent.py  random_agent.py  smart_agent.py
core/: config.py  models.py  observation_builder.py  utils.py
env/: environment.py  market.py  reset_manager.py  reward.py  step_manager.py
orion-trading-environment/: README.md
server/: app.py
simulation/: benchmark.py  runner.py
tasks/: tasks.py
