[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orion-trading-env"
version = "1.0.0"
description = "Indian NSE equity trading RL environment with realistic market regimes, tax, and brokerage simulation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.scripts]
orion-server = "server.app:main"
orion-demo   = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*",
    "core*",
    "env*",
    "server*",
    "simulation*",
    "tasks*",
]